# pact

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  404.html  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  SECURITY.md  conftest.py  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.claude/: .coc-sync-marker  VERSION  settings.json
.claude/agents/: README.md  _README.md  deep-analyst.md  documentation-validator.md  framework-advisor.md  open-source-strategist.md  security-reviewer.md  tdd-implementer.md  testing-specialist.md
.claude/agents/analysis/: analyst.md
.claude/agents/frameworks/: align-specialist.md  dataflow-specialist.md  infrastructure-specialist.md  kaizen-specialist.md  mcp-platform-specialist.md  mcp-specialist.md  ml-specialist.md  nexus-specialist.md  pact-specialist.md
.claude/agents/project/: care-dashboard-specialist.md  care-trust-specialist.md  pact-dashboard-specialist.md  pact-trust-specialist.md
.claude/agents/quality/: reviewer.md
.claude/agents/standards/: co-expert.md  coc-expert.md  eatp-expert.md
.claude/commands/: analyze.md  codify.md  implement.md  redteam.md  release.md  sync.md  test.md  todos.md  validate.md  wrapup.md
.claude/rules/: agent-reasoning.md  agents.md  artifact-flow.md  autonomous-execution.md  boundary-test.md  cc-artifacts.md  connection-pool.md  cross-sdk-inspection.md  dataflow-pool.md  dependencies.md  deployment.md  documentation.md  eatp.md  framework-first.md  git.md  governance.md  independence.md  infrastructure-sql.md  journal.md  no-stubs.md  pact-governance.md  patterns.md  python-environment.md  security.md  terrene-naming.md  testing.md  trust-plane-security.md  zero-tolerance.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  deploy.yml  publish.yml
.hypothesis/constants/: 012ed02efebc980f  047e64fd6dd474d7  04d275b9e4b3a58a  060132367c7ffdc4  0ce4c00b02171e92  0e3b76df73d82dba  0ff1f52e598ae75c  1498e437cba29289  1673623911723b68  1763a19e756debae  18250c6cae66852f  1a143a362d62ccc2  1b9ea8116053b8a6  1c27a58cad9f3ebf  1c95acfaa5dba5c7  1d5f596510dabd15  20a15cf520dadc11  2539ee9cbd80ad68  27f4f5386ed57799  2876a71a42c74e31  292eb637c78483d2  29aa02c4ec36f584  2bb508685d1be119  2ef71c7e30c3046d  30c215aaa5cbd7d5  318459b2d064aae5  32ee5159f8c8547b  33beb13049be7f8f  34342c7e29461ae8  38d0b610ab6679f0  3a6b020e69757835  40bfc270dc76046a  41f6ed7601ef908a  42dfd5bce2a87a93  440dc19c1b5fe96a  451d0b5985186f15  4558089e8c6ba13d  49a0e02d38b0b464  4a27519d33cbad95  4b06f081ff7b65c5  (+98 more)
api/: index.html
apps/mobile/: pubspec.yaml
apps/web/: .env.example  Dockerfile  components.json  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vitest.config.ts
architecture/: index.html
architecture/constraint-envelopes/: index.html
architecture/fail-closed-contract/: index.html
architecture/trust-model/: index.html
architecture/verification-gradient/: index.html
cookbook/: index.html
dm-team/approval-load-analysis/: index.html
dm-team/launch-readiness/: index.html
docs/: api.md  architecture.md  cookbook.md  getting-started.md
docs/architecture/: constraint-envelopes.md  fail-closed-contract.md  trust-model.md  verification-gradient.md
docs/dm-team/: approval-load-analysis.md  launch-readiness.md
docs/milestones/: m13-m20-requirements-analysis.md
docs/operations/: environment-config.md  operator-guide.md  pypi-publishing.md
docs/red-team/: 1001-nascent-platform-qualification.md  1002-competitive-window.md  1003-shadow-enforcer-resolved.md  1004-founder-bottleneck.md  1005-third-party-conformance.md  1006-api-cost-risk.md  1007-interop-token-exchange.md
examples/: care-config.yaml  foundation-org.yaml  minimal-config.yaml  minimal-org.yaml  quickstart.py
getting-started/: index.html
milestones/m13-m20-requirements-analysis/: index.html
operations/environment-config/: index.html
operations/operator-guide/: index.html
operations/pypi-publishing/: index.html
quickstart/: index.html
red-team/1001-nascent-platform-qualification/: index.html
red-team/1002-competitive-window/: index.html
red-team/1003-shadow-enforcer-resolved/: index.html
red-team/1004-founder-bottleneck/: index.html
red-team/1005-third-party-conformance/: index.html
red-team/1006-api-cost-risk/: index.html
red-team/1007-interop-token-exchange/: index.html
requirements/flutter-app-requirements/: index.html
rest-api/: index.html
scripts/: lint_fail_closed.py  restructure_codebase.py  run_seeded_server.py  seed_demo.py  shadow_calibrate.py
scripts/hooks/: session-start.js  validate-workflow.js
search/: search_index.json
src/care_platform/: __init__.py  bootstrap.py
src/pact_platform/: __init__.py  cli.py
tests/integration/: conftest.py  test_decorator_pipeline.py  test_dm_execution_e2e.py  test_org_roundtrip.py
tests/regression/: test_rt23_regressions.py
tests/sdk/: test_sdk_patterns.py
tests/unit/: test_approver_auth.py  test_asymmetric_audit_signing.py  test_body_size_limit.py  test_bootstrap.py  test_bootstrap_exception_handling.py  test_cors_validation.py  test_dashboard_trends.py  test_dataflow_engine_integration.py  test_docs_validation.py  test_env_example_complete.py  test_execution_runtime.py  test_execution_runtime_rt5.py  test_execution_runtime_rt7.py  test_fail_closed_lint.py  test_gradient_thresholds.py  test_health_endpoint.py  test_integration_layer.py  test_llm_pricing_config.py  test_m23_observability.py  test_package.py  test_package_exports.py  test_redteam_fixes.py  test_redteam_round2.py  test_remaining_redteam.py  test_rt6_fixes.py  test_shadow_enforcer_api.py  test_sqlite_store.py  test_store_isolation.py  test_structured_logging.py  test_workspace_discovery.py
workspaces/briefs/: 03-delegate-integration-brief.md  04-aegis-rt2-state.md
workspaces/care-platform/: decisions.yml
workspaces/pact/: .spec-coverage
(+1178 files in other folders)
