[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pact-platform"
version = "0.3.0"
description = "PACT Platform — human judgment surface for governed AI operations. Org definition, approval UX, work management, dashboard, and deployment on top of kailash-pact governance primitives."
authors = [
    {name = "Terrene Foundation", email = "info@terrene.foundation"}
]
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    # Kailash SDK ecosystem (aligned with kailash-coc-claude-py template)
    "kailash[trust,pact]>=2.1.0",
    "kailash-pact>=0.4.0",
    "kailash-dataflow>=1.2.0",
    "kailash-kaizen>=2.3.0",
    # CLI Framework
    "click>=8.0",
    "rich>=13.0.0",
    # Database migrations
    "alembic>=1.12.0",
    # Cryptography (for EATP trust chains)
    "cryptography>=41.0.0",
    # JCS canonical JSON serialization (RFC 8785)
    "jcs>=0.2.1",
    # API server
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    # Rate limiting
    "slowapi>=0.1.9",
    # Monitoring
    "prometheus-client>=0.20.0",
    # Utilities
    "python-dotenv>=1.0.0",
    "structlog>=23.1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Nexus multi-channel deployment
nexus = [
    "kailash-nexus>=1.4.3",
]
# kaizen-agents (GovernedSupervisor — Delegate engine)
agents = [
    "kaizen-agents>=0.3.0",
]
# Firebase Admin SDK for SSO token verification
firebase = [
    "firebase-admin>=6.0",
]
# PostgreSQL support
postgres = [
    "psycopg[binary]>=3.0",
]
# All optional dependencies
all = [
    "pact-platform[nexus,agents,firebase,postgres]",
]
dev = [
    # Testing (pytest>=7.2.0 removes vulnerable py dependency)
    "pytest>=7.2.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21.0",
    "freezegun>=1.2.0",
    # HTTP client for integration tests
    "httpx>=0.25.0",
    # PostgreSQL for tests
    "psycopg[binary]>=3.0",
    # Linting & Formatting
    "black>=23.0",
    "isort>=5.12.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    # Security & Pre-commit
    "detect-secrets>=1.5.0",
    "pre-commit>=4.2.0",
]

[project.scripts]
pact = "pact_platform.cli:main"

[project.urls]
"Homepage" = "https://github.com/terrene-foundation/pact"
"Bug Tracker" = "https://github.com/terrene-foundation/pact/issues"
"Documentation" = "https://terrene.dev/pact"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*", ".*", "__pycache__*", "workspaces*", "docs*", "scripts*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.black]
line-length = 100
target-version = ["py311", "py312", "py313"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = [
    "E501",    # line too long (handled by formatter)
    "F841",    # local variable assigned but never used (pre-existing, tracked for cleanup)
    "B007",    # loop variable not used (pre-existing)
    "B008",    # function call in default arg (FastAPI Depends pattern)
    "B017",    # assertRaises(Exception) too broad (test patterns, low risk)
    "B904",    # raise from within except (pre-existing, tracked for cleanup)
    "E402",    # module-level import not at top (conditional imports)
    "SIM102",  # collapsible if (style preference, pre-existing)
    "SIM108",  # ternary operator (style preference, pre-existing)
    "SIM109",  # or-membership (style preference, pre-existing)
    "SIM110",  # any/all loop (style preference, pre-existing)
    "SIM105",  # contextlib.suppress (try/except ImportError guard pattern is clearer)
    "SIM117",  # nested with statements (style preference, pre-existing)
    "UP042",   # str enum inheritance (intentional — str enums for JSON serialization)
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
